# meal-mate

./: .gitignore  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/api/: permissions.py
backend/src/api/migrations/: 0001_initial.py  0002_alter_recipe_created_by.py  0002_alter_user_email_alter_user_first_name_and_more.py  0002_remove_mealplan_created_at_and_more.py  0003_unit_mealplan_recipe_ingredient_usermealplan_and_more.py  0004_remove_ingredient_quantity_remove_ingredient_recipe.py  0005_recipeingredient.py  0006_remove_unit_symbol_unit_abbreviation_unit_category_and_more.py  0007_ingredient_created_by.py
backend/src/api/models/: __init__.py  ingredient.py  meal_plan.py  recipe.py  recipe_ingredient.py  unit.py  user.py
backend/src/api/serializers/: ingredient.py  meal_plan.py  recipe.py  recipe_ingredient.py  unit.py  user.py
backend/src/api/views/: ingredient.py  meal_plan.py  recipe.py  recipe_ingredient.py  unit.py  user.py
backend/src/config/: settings.py  urls.py
backend/src/users/: models.py  views.py
